--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "watch": "vite build --watch",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -16,8 +17,11 @@
     "@mui/material": "^7.3.4",
     "@mui/x-data-grid": "^8.13.1",
     "papaparse": "^5.5.3",
+    "plotly.js-basic-dist-min": "^3.1.1",
+    "plotly.js-dist-min": "^3.1.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
